--- a/stencil-workspace/src/components/modus-toolbar/modus-toolbar.scss
+++ b/stencil-workspace/src/components/modus-toolbar/modus-toolbar.scss
@@ -1,4 +1,4 @@
-@import './modus-toolbar.vars.scss';
+@import './modus-toolbar.vars';
 
 div {
   align-items: center;
@@ -20,15 +20,15 @@ div {
     box-shadow: $box-shadow-lg;
 
     &.layout-horizontal {
-      padding: $rem-4px 0 $rem-4px 0;
       border-left: $rem-4px solid $modus-toolbar-bg;
       border-right: $rem-8px solid $modus-toolbar-bg;
+      padding: $rem-4px 0 $rem-4px 0;
     }
 
     &.layout-vertical {
-      padding: 0 $rem-4px 0 $rem-4px;
-      border-top: $rem-4px solid $modus-toolbar-bg;
       border-bottom: $rem-8px solid $modus-toolbar-bg;
+      border-top: $rem-4px solid $modus-toolbar-bg;
+      padding: 0 $rem-4px 0 $rem-4px;
     }
   }
 
