--- a/stencil-workspace/src/global/themes.scss
+++ b/stencil-workspace/src/global/themes.scss
@@ -771,6 +771,10 @@
   --modus-toolbar-button-hover-bg: var(--modus-gray-0);
   --modus-toolbar-button-active-bg: var(--modus-gray-1);
   --modus-toolbar-divider-bg: var(--modus-gray-0);
+  --modus-toolbar-dark-bg: var(--modus-gray-10);
+  --modus-toolbar-button-dark-hover-bg: var(--modus-gray-4);
+  --modus-toolbar-button-dark-active-bg: var(--modus-gray-6);
+  --modus-toolbar-divider-dark-bg: var(--modus-gray-8);
 }
 
 // Mixins
